# rhizome

./: .dockerignore  .env  .gitmodules  Cargo.toml  Dockerfile  README.md  docker-compose-local.yml  docker-compose.yml  sqlx-data.json
configuration/: base.yaml
deployment/app/: Dockerfile  dev.Dockerfile
deployment/nginx/: Dockerfile  server.conf
deployment/startup/: Dockerfile
migrations/: 20221217065430_create_page_table.sql  20221219052824_create_link_table.sql  20221228131914_create_users_table.sql  20230104125713_seed_user.sql
public/assets/: highlight.min.js  style.css
scripts/: backup_db.sh  init_db.sh  init_redis.sh
src/: configuration.rs  error.rs  lib.rs  main.rs  page.rs  replacements.rs  session_state.rs  startup.rs  utils.rs
src/authentication/: middleware.rs  mod.rs  passwords.rs
src/routes/: home.rs  mod.rs
src/routes/admin/: dashboard.rs  logout.rs  mod.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/login/: get.rs  mod.rs  post.rs
src/routes/pages/: get.rs  mod.rs  post.rs  search.rs  suggest.rs
templates/: home.html  login.html
templates/admin/: change_password.html  dashboard.html
templates/pages/: edit.html  page.html  read.html  results.html  suggestions.html
tests/api/: change_password.rs  health_check.rs  helpers.rs  main.rs  pages.rs
