[package]
name = "knowledge-base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6"
actix-session = { version = "0.6", features = ["redis-rs-tls-session"] }
actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
actix-web-lab = "0.18"
actix-web = "4.2"
anyhow = "1"
askama = "0.10"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
config = "0.13"
env_logger = "0.9"
lazy_static = "1.4"
log = "0.4"
percent-encoding = "2.2"
pulldown-cmark = "0.8"
rand = "0.8"
regex = "1"
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
argon2 = { version = "0.4", features = ["std"] }
tokio = { version = "1.22", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }

[dependencies.sqlx]
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline",
]
version = "0.6"

[dev-dependencies]
reqwest = { version = "0.11", features = ["cookies"] }